2003-02-11  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
        * lib/structure:
          - implemented take(), I wonder why I left it like that
          - fix: size() returns number of components

2003-02-11 Mickael Marchand <marchand@kde.org>
	* parts/svn:
    - added an output window for subversion (just like CVS)
    - removed i18n("Subversion") so that translators does not translate it
      anymore :)

2003-02-11  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
        * lib/structure:
          - Trie: implemented higher order application function
          - KDict: implement setAutoDelete interface of QDict
          - don't install test binary
        * lib/qextmdi:
          - use KDict instead of QDict, more to come ;)
	* parts/filecreate:
          - fix: Add cpp and h types by default when there is
            no template directory in project

2003-02-11 F@lk Brettschneider <falk@kdevelop.org>
	* took the patch of Jens Zurheide (Thanks jens.zurheide@gmx.de!) and modified it a bit.
	  Additionally to the already existing ALT+Left/Right switching (which switches the views
	  in the order of they were opened), now there is also ALT+Up for switching between views
	  in the order of how they were last accessed, and ALT+Down for the opposite. Hold ALT
	  pressed and repeat Up or Down to cycle through the views.
      
2003-02-11 Alexander Dymo <cloudtemple@mksat.net>
	* parts/filecreate:
	 - GUI for both global and project level configuration added.

2003-02-09 Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
  * trollprojectpart: The dialog for subclassing widgets based on ui-files now works
    iteratively, so you can update your subclasses according to the changes made in
    the ui-files.

2003-02-09 F@lk Brettschneider <falk@kdevelop.org>
	* bugfix: classview now alphabetically sorted again
	* KDevPlugin interface extended with 'KDevMakeFrontend* makeFrontend()' which made it
	  possible to raise the messages view on 'Build'
