@@ -45,7 +45,8 @@ enum DBGStateFlags
   s_attached          = 512,
   s_core              = 1024,
   s_waitTimer         = 2048,
-  s_shuttingDown      = 4096
+  s_shuttingDown      = 4096,
+  s_viewThreads       = 8192
 };
 /***************************************************************************/
 /***************************************************************************/
