@@ -50,7 +50,8 @@ enum GDBCmd
   PROGRAM_STOP    = 'S',
   SHARED_CONT     = 's',
 
-  BACKTRACE       = 'T',
+  THREAD          = 'T',
+  BACKTRACE       = 't',
 
   SETWATCH        = 'W',
   UNSETWATCH      = 'w',
